# django-pytest

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile.test  GitVersion.yml  LICENSE  Makefile  README.md  cliff.toml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  quality-gate-check.yml  release.yml  secret-scan.yml  sonar.yml
django_pytest/: __init__.py  admin.py  runner.py
django_pytest/analysis/: __init__.py  engine.py  models.py
django_pytest/analysis/checks/: __init__.py  anti_patterns.py  base.py  coverage_gaps.py  slow_tests.py
django_pytest/management/commands/: testcheck.py
django_pytest/reporters/: json_reporter.py  terminal.py
docs/adr/: ADR-001-hybrid-app-and-plugin.md
examples/demo/: .gitignore  README.md  conftest.py  manage.py  pytest.ini
examples/demo/demo_project/: settings.py  urls.py
examples/demo/shop/: apps.py  pricing.py  tests_pricing.py
legal/: cgu.md  mentions-legales.md
src/django_pytest/: __init__.py  admin.py  apps.py  plugin.py  runner.py
src/django_pytest/analysis/: context.py  runtime.py
src/django_pytest/analysis/checks/: parallelization.py
src/django_pytest/management/commands/: pytest.py
src/django_pytest/reporters/: __init__.py  html_reporter.py
tests/: conftest.py  tests_anti_patterns.py  tests_checks_runtime.py  tests_django_integration.py  tests_engine_reporters.py  tests_html_reporter.py  tests_plugin.py  tests_runner.py  tests_runtime.py  urls_for_admin.py
