[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-pytest"
version = "0.1.0"
description = "Native pytest integration for Django plus a test analysis & optimization engine."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "chrysa", email = "greau.anthony+chrysa@gmail.com" }]
keywords = ["django", "pytest", "testing", "analysis", "optimization"]
dependencies = [
    "django>=6.0.7",
    "pytest>=9.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "mypy>=2.3.0",
    "django-stubs>=6.0.6",
]

[project.entry-points.pytest11]
django_pytest = "django_pytest.plugin"

[tool.setuptools.packages.find]
where = ["src"]
include = ["django_pytest*"]

[tool.setuptools.package-data]
django_pytest = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "-p no:django_pytest -p no:query_optimizer --tb=short"
python_files = "tests_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 120
indent-width = 4
# py313 (not py314): ruff format <=0.15.15 strips multi-except parens under py314 — restore when fixed upstream
target-version = "py313"
# examples/ holds illustrative demo Django apps, not library code.
extend-exclude = [".pytest_cache/*", "*.egg-info/*", ".ruff_cache/*", "examples"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "ANN", "ARG"]
ignore = ["E501", "ANN401"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["django_pytest", "tests"]
lines-after-imports = 2

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
# Django's base classes/decorators are untyped here (django-stubs needs a settings
# module, which a reusable app does not own). Relax only these two strict sub-checks.
disallow_subclassing_any = false
disallow_untyped_decorators = false

# admin.py intentionally monkey-patches admin.site.get_urls to inject the report
# view without forcing users to swap their AdminSite. The [method-assign] check
# is disabled here (module-scoped, not inline) since the reassignment is by design.
[[tool.mypy.overrides]]
module = "django_pytest.admin"
disable_error_code = ["method-assign"]

[tool.coverage.run]
source = ["django_pytest"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
